feat: user table and modified auth routes (#11)
