# backend/typescript/middlewares/validators/userValidators.ts
@@ -42,5 +42,8 @@ export const updateUserDtoValidator = async (
   if (!validatePrimitive(req.body.role, "string")) {
     return res.status(400).send(getApiValidationError("role", "string"));
   }
+  if (!validatePrimitive(req.body.phoneNumber, "string")) {
+    return res.status(400).send(getApiValidationError("phoneNumber", "string"));
+  }
   return next();
 };
