# backend/typescript/models/user.model.ts
@@ -1,21 +1,30 @@
-import { Column, DataType, Model, Table, HasOne } from "sequelize-typescript";
+import {
+  Column,
+  DataType,
+  Model,
+  Table,
+  AllowNull,
+} from "sequelize-typescript";
+import { DataTypes } from "sequelize";
 import { Role } from "../types";
-import Donor from "./donor.model";
 
 @Table({ tableName: "users" })
 export default class User extends Model {
-  @HasOne(() => Donor, 'user_id')
-  donor!: Donor;
-
   @Column({ type: DataType.STRING })
   first_name!: string;
 
+  @AllowNull(false)
   @Column({ type: DataType.STRING })
   last_name!: string;
 
+  @AllowNull(false)
   @Column({ type: DataType.STRING })
   auth_id!: string;
 
-  @Column({ type: DataType.ENUM("User", "Admin") })
+  @AllowNull(false)
+  @Column({ type: DataType.ENUM("User", "Admin", "Volunteer", "Donor") })
   role!: Role;
+
+  @Column({ type: DataTypes.STRING })
+  phone_number!: string;
 }
